@@ -1,14 +1,7 @@
-FROM openjdk:8-jre-alpine
+FROM openjdk:12-jdk-alpine
 
-ENV APPLICATION_USER ktor
-RUN adduser -D -g '' $APPLICATION_USER
+RUN apk add --no-cache bash
 
-RUN mkdir /app
-RUN chown -R $APPLICATION_USER /app
+WORKDIR /chequebook-image-ocr
 
-USER $APPLICATION_USER
-
-COPY ./build/libs/my-application.jar /app/my-application.jar
-WORKDIR /app
-
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "my-application.jar"]
+CMD ./gradlew run
